[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mooncake-writer"
version = "0.1.0"
description = "A library for converting text to hash blocks and vice versa using aiperf's mooncake implementation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["aiperf", "mooncake", "hash", "text", "kv-cache", "llm", "benchmarking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiperf>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/yourusername/mooncake-writer"
Documentation = "https://github.com/yourusername/mooncake-writer#readme"
Repository = "https://github.com/yourusername/mooncake-writer"
Issues = "https://github.com/yourusername/mooncake-writer/issues"

[tool.hatch.build.targets.wheel]
packages = ["mooncake_writer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
